fix spacing for multiple images

--- a/public/typo3conf/ext/fx_templates_jungerkammerchor/Resources/Public/StyleSheet/custom.less
+++ b/public/typo3conf/ext/fx_templates_jungerkammerchor/Resources/Public/StyleSheet/custom.less
@@ -290,3 +290,9 @@ p {
     }
   }
 }
+
+.ce-column {
+  + .ce-column {
+    margin-top:15px;
+  }
+}
